@@ -7,6 +7,9 @@
 	instead of keyboard, fixes setting mouse or mixed mouse-keyboard
 	bindings from SawfishConfig (keyboard-only bindings still work)
 
+	* lisp/sawfish/cfg/layouts/keymap.jl: removed beautify-keymap-name,
+	use beautify-symbol-name instead
+
 2011-06-10  Christopher Roy Bratusek <nano@tuxfamily.org>
 	* lisp/sawfish/cfg/utils.jl: removed (funcs now in rep.util.misc)
 
